minor_changes_in _ui

--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -100,19 +100,19 @@
         class="shadow-sm h-14 p-2 flex md:justify-center md:items-center w-full"
       >
         <div
-          class="md:w-11/12 w-full h-14 flex justify-between items-center bg-black"
+          class="md:w-11/12 w-full h-14 flex justify-between items-center bg-white"
         >
           <!-- Navigation-Bar-Site-Heading -->
           <div>
             <h1
-              class="text-2xl text-slate-900 font-base -tracking-tight p-4 text-white"
+              class="text-2xl text-slate-900 font-base -tracking-tight p-4 text-black"
             >
               Prayaas
             </h1>
           </div>
           <!-- Navigation-Bar-icon-tray-container -->
-          <div class="hidden md:block mr-10">
-            <ul class="flex gap-4 text-xs text-white font-base">
+          <div class="hidden md:block mr-10 font-semibold">
+            <ul class="flex gap-4 text-xs text-black font-base">
               <li><a href="http://localhost:8000/prayaas/home">Home</a></li>
               <li><a href="#">Dashboard</a></li>
               <li><a href="#">Contributions</a></li>
@@ -127,20 +127,20 @@
     <!-- Main-content-are -->
     <div class="w-full h-full flex justify-center pl-2 pr-2 items-start">
       <div
-        class="w-11/12 h-full flex flex-row items-start bg-zinc-50 border border-blue-200"
+        class="w-11/12 h-full flex flex-row items-start bg-white"
       >
         <div
-          class="w-3/12 border-r border-gray-300 h-full flex flex-col justify-start items-start"
+          class="w-3/12 h-full flex flex-col justify-start items-start"
         >
           <!-- User-Card -->
           <div class="w-full h-full flex flex-col justify-start items-center">
             <div
-              class="w-11/12 h-fit p-2 m-2 bg-zinc-100 text-slate-800 border border-blue-200 m-2 rounded-md"
+              class="w-11/12 h-fit p-2 m-2 bg-zinc-100 text-slate-800 border md:mt-10 border-slate-200 m-2 rounded-md"
             >
               <h1 class="text-sm font-semibold tracking-tight">Dashboard</h1>
             </div>
             <div
-              class="w-11/12 p-2 h-fit bg-zinc-100 text-slate-800 border border-blue-200 m-2 rounded-md"
+              class="w-11/12 p-2 h-fit bg-zinc-100 text-slate-800 border border-slate-200 m-2 rounded-md"
             >
               <h1 class="text-xs text-black pd-1 font-semibold cursor-pointer">
                 Donor-ID: 
@@ -227,25 +227,25 @@
               class="w-full h-full flex justify-center p-5 items-center gap-10"
             >
               <div class="w-full h-full">
-                <div class="block mb-10">
-                  <h1 class="font-bold px-5 mb-5">Donate as</h1>
-                  <p class="px-5 text-xs font-semibold text-slate-900">
+                <div class="block mb-10 px-5">
+                  <h1 class=" md:text-3xl text-2xl text-slate-800 md:mb-5 font-semibold">Donate as</h1>
+                  <p class=" text-xs font-semibold text-slate-900">
                     * Your Payment Status Will be Confirmed To You by our admin.
                   </p>
-                  <p class="px-5 text-xs font-semibold text-slate-900">
+                  <p class=" text-xs font-semibold text-slate-900">
                     * Please Input the Valid Donation Amounts and Items
                     Quantity.
                   </p>
-                  <p class="px-5 text-xs font-semibold text-red-400">
+                  <p class=" text-xs font-semibold text-red-400">
                     * Payment Information is secured and not shared with anyone.
                   </p>
-                  <p class="px-5 text-xs font-semibold text-red-400">
+                  <p class=" text-xs font-semibold text-red-400">
                     * Any fraudulent or unauthorized requests will be subject to
                     investigation and appropriate action.
                   </p>
                 </div>
                 <div
-                  class="w-full h-full flex gap-10 justify-center items-center"
+                  class="w-full h-full md:mt-36 flex gap-20 justify-center items-center"
                 >
                   <div
                     class="w-4/12 h-full bg-zinc-200 flex justify-center items-center p-10 rounded-lg border border-gray-400 divback font-semibold text-2xl text-slate-900 tracking-tighter cursor-pointer"
