--- a/views/home.ejs
+++ b/views/home.ejs
@@ -201,17 +201,17 @@
 
         <!-- Data-Analytics -->
         <div class="w-full h-full md:mb-0 mt-20 md:mt-5">
-          <h1 class="px-10 py-5 font-semibold text-sm font-semibold underline">Donations Statistics</h1>
+          <h1 class="px-10 py-5 font-semibold text-md font-semibold ">Donations Statistics</h1>
           <div class="w-full h-36 flex p-2 justify-center gap-10 items-center">
             <div class="w-4/12 rounded-md h-full border border-slate-300">
-              <h1 class="text-sm font-bold text-center py-4 text-slate-700 bg-zinc-300 border-b border-gray-400">Amount Donated</h1>
-              <h1 class="text-3xl text-center font-semibold px-3 py-3 text-slate-700">$234 /</h1>
+              <h1 class="text-sm font-bold text-center py-4 text-slate-700 bg-zinc-200">Amount Donated</h1>
+              <h1 class="text-3xl text-center font-semibold px-3 py-3 text-slate-700">Rs. 234 /-</h1>
             </div>
             <div class="w-4/12 rounded-md h-full border border-slate-300">
-              <h1 class="text-sm font-bold text-center py-4 text-slate-700 bg-zinc-300 border-b border-gray-400">Items Donated</h1>
-              <h1 class="text-xs font-semibold px-3 pb-1 pt-2 text-slate-700">1. Food <span class="pl-5">: 9</span></h1>
-              <h1 class="text-xs font-semibold px-3 pb-1 text-slate-700">2. Clothes <span class="pl-0">: 20</span></h1>
-              <h1 class="text-xs font-semibold px-3 pb-1 text-slate-700">3. Books <span class="pl-3">: 25</span></h1>
+              <h1 class="text-sm font-bold text-center py-4 text-slate-700 bg-zinc-200">Items Donated</h1>
+              <h1 class="text-xs font-semibold pb-1 px-3 pt-2 text-slate-700">1. Food <span class="pl-5">: 9</span></h1>
+              <h1 class="text-xs font-semibold pb-1 px-3 pb-1 text-slate-700">2. Clothes <span class="pl-0">: 20</span></h1>
+              <h1 class="text-xs font-semibold pb-1 px-3 pb-1 text-slate-700">3. Books <span class="pl-3">: 25</span></h1>
 
           </div>
           <!-- <div class="w-full h-60 flex gap-5 p-2 justify-center items-center">
@@ -225,12 +225,20 @@
         <div class="w-full h-full md:mb-20 mt-20 md:mt-5">
           <h1 class="px-10 py-5 font-semibold">Graph Visualization</h1>
           <div class="w-full h-60 flex gap-5 p-2 justify-center items-center">
-            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100">s</div>
-            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100">s</div>
+            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
+              <h1>Graph</h1>
+            </div>
+            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
+              <h1>Graph</h1>
+            </div>
           </div>
           <div class="w-full h-60 flex gap-5 p-2 justify-center items-center">
-            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100">s</div>
-            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100">s</div>
+            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
+              <h1>Graph</h1>
+            </div>
+            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
+              <h1>Graph</h1>
+            </div>
           </div>
         </div>
         <!-- Data-Analytics -->
