--- a/views/payments.ejs
+++ b/views/payments.ejs
@@ -107,18 +107,18 @@
   <div class="w-screen h-fit flex flex-col">
     <!-- Header-Nav-Bar -->
     <div class="shadow-sm h-14 p-2 flex md:justify-center md:items-center w-full">
-      <div class="md:w-11/12 w-full h-14 flex justify-between items-center bg-black">
+      <div class="md:w-11/12 w-full h-14 flex justify-between items-center bg-white">
         <!-- Navigation-Bar-Site-Heading -->
         <div>
-          <h1 class="text-2xl text-slate-900 font-base -tracking-tight p-4 text-white">
+          <h1 class="text-2xl text-slate-900 font-base -tracking-tight p-4 text-black">
             Prayaas
           </h1>
         </div>
         <!-- Navigation-Bar-icon-tray-container -->
         <div class="hidden md:block mr-10">
-          <ul class="flex gap-4 text-xs text-white font-base">
+          <ul class="flex gap-4 text-xs font-semibold  text-black font-base">
             <li><a href="http://localhost:8000/prayaas/home">
-                <h1 class="text-xs font-semibold cursor-pointer">Home</h1>
+                <h1 class="text-xs cursor-pointer">Home</h1>
               </a></li>
             <li><a class="" href="#">Dashboard</a></li>
             <li><a class="" href="#">Contributions</a></li>
@@ -132,14 +132,14 @@
 
   <!-- Main-content-are -->
   <div class="w-full h-full flex justify-center pl-2 pr-2 items-start">
-    <div class="w-11/12 h-full flex flex-row items-start bg-zinc-50 border border-blue-200">
-      <div class="w-3/12 border-r border-gray-300 h-full flex flex-col justify-start items-start">
+    <div class="w-11/12 h-full flex flex-row items-start bg-white">
+      <div class="w-3/12 h-full flex flex-col justify-start items-start">
         <!-- User-Card -->
         <div class="w-full h-full flex flex-col justify-start items-center">
-          <div class="w-11/12 h-fit p-2 m-2 bg-zinc-100 text-slate-800 border border-blue-200 m-2 rounded-md">
+          <div class="w-11/12 h-fit p-2 m-2 bg-zinc-100 md:mt-10 text-slate-800 border border-slate-200 m-2 rounded-md">
             <h1 class="text-sm font-semibold tracking-tight">Dashboard</h1>
           </div>
-          <div class="w-11/12 p-2 h-fit bg-zinc-100 text-slate-800 border border-blue-200 m-2 rounded-md">
+          <div class="w-11/12 p-2 h-fit bg-zinc-100 text-slate-800 border border-slate-200 m-2 rounded-md">
             <h1 class="text-xs pd-1 font-semibold cursor-pointer">
               Donor-ID:
               <span class="pl-3 text-slate-600">
@@ -215,12 +215,12 @@
       </div>
       <!-- Right Section - Form -->
       <div class="w-9/12 h-full flex flex-col justify-start items-start overflow-scroll overflow-x-hidden">
-        <div class="w-full h-28 flex justify-center mt-5 items-center">
+        <div class="w-full h-fit flex justify-center mt-5 items-center">
 
-          <div class="w-full h-full">
-            <h1 class="px-10 py-5 font-bold">History</h1>
+          <div class="w-full h-full px-10 py-5">
+            <h1 class="md:text-3xl text-2xl text-slate-800 font-semibold">History</h1>
             <div
-              class="w-11/12 h-1/2 p-2 flex gap-5 underline text-red-500 justify-center items-center text-xs font-bold">
+              class="w-11/12 h-1/2 p-2 flex gap-5 underline text-red-500 md:mt-20 justify-center items-center text-sm font-bold">
               We Assure Your Donation History Window With
             </div>
             <div class="w-11/12 h-1/2 p-2 flex gap-5 justify-center items-center">
@@ -237,16 +237,16 @@
           </div>
         </div>
 
-        <div class="w-full h-full py-10 ml-10 mt-10 flex justify-start items-center">
+        <div class="w-full h-full py-10 ml-10 mt-0 flex justify-start items-center">
 
-          <div class="w-11/12 h-full mt-20 mb-20">
+          <div class="w-11/12 h-full mt-0 mb-20">
 
             <div class="w-full h-full mt-36">
               <h1 class="mx-5 w-fit font-semibold mb-10 text-sm border-b border-slate-500">Amount Payments Donations
               </h1>
               <div>
                 <div
-                  class="flex justify-between text-xs mb-5 font-bold items-center pl-2 pr-2 w-full h-8 bg-zinc-300 mb-1 border border-zinc-400 rounded-md">
+                  class="flex justify-between text-xs mb-2 font-bold items-center pl-2 pr-2 w-full h-8 bg-zinc-300 mb-1 border border-zinc-400 rounded-sn">
                   <div class="w-1/12 h-full flex border-r border-gray-400 justify-center items-center">Sr.No</div>
                   <div class="w-2/12 h-full flex border-r border-gray-400 justify-center items-center ">Donation_ID
                   </div>
@@ -260,7 +260,7 @@
               <% donate_money.forEach(function(donation, index) { %>
                 <% if (donation.request_type==="Amount" && donation.donor_id===donor_id) { %>
                   <div
-                    class="flex justify-between flex-row w-full rounded-md cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2 w-full h-28 bg-white mb-0.5 border border-3 border-zinc-400 ">
+                    class="flex justify-between flex-row w-full rounded-sm cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2 w-full h-28 bg-white mb-0.5 border border-3 border-zinc-400 ">
                     <div class="w-1/12 h-full flex border-r border-slate-400 justify-center items-center">
                       <%= index + 1 %>
                     </div>
@@ -291,7 +291,7 @@
               </h1>
               <div>
                 <div
-                  class="flex justify-between text-xs mb-5 font-bold items-center pl-2 pr-2 w-full h-8 bg-zinc-300 rounded-md mb-1 border border-zinc-400">
+                  class="flex justify-between text-xs mb-5 font-bold items-center pl-2 pr-2 w-full h-8 bg-zinc-300 rounded-sm mb-1 border border-zinc-400">
                   <div class="w-1/12 h-full flex border-r border-gray-400 justify-center items-center">Sr.No</div>
                   <div class="w-2/12 h-full flex border-r border-gray-400 justify-center items-center ">Donation_ID
                   </div>
@@ -305,7 +305,7 @@
               <% donate_items.forEach(function(donation, index) { %>
                 <% if (donation.request_type==="Items" && donation.donor_id===donor_id) { %>
                   <div
-                    class="flex justify-between flex-row w-full cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2 w-full h-28 bg-white mb-0.5 rounded-md border border-3 border-zinc-400 ">
+                    class="flex justify-between flex-row w-full cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2 w-full h-28 bg-white mb-0.5 rounded-sm border border-3 border-zinc-400 ">
                     <div class="w-1/12 h-full flex border-r border-slate-400 justify-center items-center">
                       <%= index + 1 %>
                     </div>
