--- a/views/home.ejs
+++ b/views/home.ejs
@@ -222,26 +222,20 @@
         <!-- Data-Analytics -->
 
         <!-- Data-Analytics -->
-        <div class="w-full h-full md:mb-20 mt-20 md:mt-5">
+        <div class="w-full h-full flex flex-col justify-center items-center md:mb-20 mt-20 md:mt-5">
           <h1 class="px-10 py-5 font-semibold">Graph Visualization</h1>
-          <div class="w-full h-60 flex gap-5 p-2 justify-center items-center">
-            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
-              <h1>Graph</h1>
-            </div>
-            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
-              <h1>Graph</h1>
-            </div>
-          </div>
-          <div class="w-full h-60 flex gap-5 p-2 justify-center items-center">
-            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
-              <h1>Graph</h1>
-            </div>
-            <div class="w-5/12 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
-              <h1>Graph</h1>
+          <div class="w-11/12 md:w-full h-full">
+            <div class="w-full h-60 md:h-10/12 md:flex gap-5 p-2 justify-center items-center">
+              <div class="w-full md:w-1/2 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center">
+                <h1>Graph</h1>
+              </div>
+              <div class="w-full md:w-1/2 rounded-md h-full border border-slate-300 bg-slate-100 flex justify-center items-center mt-5 md:mt-0">
+                <h1>Graph</h1>
+              </div>
             </div>
           </div>
         </div>
-        <!-- Data-Analytics -->
+                <!-- Data-Analytics -->
 
       </div>
       <!-- Right Section -->
@@ -254,7 +248,7 @@
 
   <!-- footer -->
   <div class="w-full h-fit flex justify-center items-end md:pl-2 md:pr-2">
-    <div class="md:w-11/12 w-full h-fit pt-10 pb-10 flex justify-center items-center bg-gray-800">
+    <div class="w-11/12 h-fit pt-10 pb-10 flex justify-center items-center bg-gray-800">
       <div class="text-slate-200">
         <h1 class="text-xs font-semibold cursor-pointer">
           Prayaas@-NGO (Non-Governmental Organization)
