shivam's site commit changes

--- a/views/donate.ejs
+++ b/views/donate.ejs
@@ -105,14 +105,14 @@
           <!-- Navigation-Bar-Site-Heading -->
           <div>
             <h1
-              class="text-2xl text-slate-900 font-base -tracking-tight p-4 text-black"
+              class="text-2xl font-semibold -tracking-tight p-4 text-slate-800"
             >
               Prayaas
             </h1>
           </div>
           <!-- Navigation-Bar-icon-tray-container -->
-          <div class="hidden md:block mr-10 font-semibold">
-            <ul class="flex gap-4 text-xs text-black font-base">
+          <div class="hidden md:block mr-10 font-bold">
+            <ul class="flex gap-4 text-sm text-slate-800 font-base">
               <li><a href="http://localhost:8000/prayaas/home">Home</a></li>
               <li><a href="#">Dashboard</a></li>
               <li><a href="#">Contributions</a></li>
