--- a/views/generate_request.ejs
+++ b/views/generate_request.ejs
@@ -73,16 +73,16 @@
         <div class="md:w-11/12 w-full h-14 flex justify-between items-center">
           <!-- Navigation-Bar-Site-Heading -->
           <div>
-            <h1 class="text-2xl font-base -tracking-tight p-4 text-black">
+            <h1 class="text-2xl font-semibold -tracking-tight p-4 text-slate-800">
               Prayaas
             </h1>
           </div>
           <!-- Navigation-Bar-icon-tray-container -->
           <div class="hidden md:block mr-10">
-            <ul class="flex gap-4 text-xs text-black font-semibold">
+            <ul class="flex gap-4 text-sm text-slate-800 font-bold">
               <li>
                 <a href="http://localhost:8000/prayaas/home">
-                  <h1 class="text-xs font-semibold cursor-pointer">Home</h1>
+                  <h1 class="text-sm font-bold cursor-pointer">Home</h1>
                 </a>
               </li>
               <li><a class="" href="#">Dashboard</a></li>
