--- a/views/payments.ejs
+++ b/views/payments.ejs
@@ -110,15 +110,15 @@
       <div class="md:w-11/12 w-full h-14 flex justify-between items-center bg-white">
         <!-- Navigation-Bar-Site-Heading -->
         <div>
-          <h1 class="text-2xl text-slate-900 font-base -tracking-tight p-4 text-black">
+          <h1 class="text-2xl font-semibold -tracking-tight p-4 text-slate-800">
             Prayaas
           </h1>
         </div>
         <!-- Navigation-Bar-icon-tray-container -->
         <div class="hidden md:block mr-10">
-          <ul class="flex gap-4 text-xs font-semibold  text-black font-base">
+          <ul class="flex gap-4 text-sm font-bold text-slate-800 font-base">
             <li><a href="http://localhost:8000/prayaas/home">
-                <h1 class="text-xs cursor-pointer">Home</h1>
+                <h1 class="cursor-pointer">Home</h1>
               </a></li>
             <li><a class="" href="#">Dashboard</a></li>
             <li><a class="" href="#">Contributions</a></li>
@@ -219,21 +219,6 @@
 
           <div class="w-full h-full px-10 py-5">
             <h1 class="md:text-3xl text-2xl text-slate-800 font-semibold">History</h1>
-            <div
-              class="w-11/12 h-1/2 p-2 flex gap-5 underline text-red-500 md:mt-20 justify-center items-center text-sm font-bold">
-              We Assure Your Donation History Window With
-            </div>
-            <div class="w-11/12 h-1/2 p-2 flex gap-5 justify-center items-center">
-              <div
-                class="w-3/12 bg-zinc-200 h-full rounded-lg flex justify-center items-center border border-slate-200 text-xs font-semibold">
-                Confidentiality</div>
-              <div
-                class="w-3/12 bg-zinc-200 h-full rounded-lg flex justify-center items-center border border-slate-200 text-xs font-semibold">
-                Integrity</div>
-              <div
-                class="w-3/12 bg-zinc-200 h-full rounded-lg flex justify-center items-center border border-slate-200 text-xs font-semibold">
-                Authentication</div>
-            </div>
           </div>
         </div>
 
@@ -260,7 +245,7 @@
               <% donate_money.forEach(function(donation, index) { %>
                 <% if (donation.request_type==="Amount" && donation.donor_id===donor_id) { %>
                   <div
-                    class="flex justify-between flex-row w-full rounded-sm cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2 w-full h-28 bg-white mb-0.5 border border-3 border-zinc-400 ">
+                    class="flex justify-between flex-row w-full rounded-sm cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2 h-10 bg-white mb-0.5 border border-3 border-zinc-400 ">
                     <div class="w-1/12 h-full flex border-r border-slate-400 justify-center items-center">
                       <%= index + 1 %>
                     </div>
@@ -286,7 +271,7 @@
                     <% }); %>
             </div>
 
-            <div class="w-full h-full mt-60">
+            <div class="w-full h-full">
               <h1 class="mx-5 w-fit font-semibold mb-10 text-sm border-b border-slate-500">Other Donations
               </h1>
               <div>
@@ -305,7 +290,7 @@
               <% donate_items.forEach(function(donation, index) { %>
                 <% if (donation.request_type==="Items" && donation.donor_id===donor_id) { %>
                   <div
-                    class="flex justify-between flex-row w-full cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2 w-full h-28 bg-white mb-0.5 rounded-sm border border-3 border-zinc-400 ">
+                    class="flex justify-between flex-row w-full cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2  h-10 bg-white mb-0.5 rounded-sm border border-3 border-zinc-400 ">
                     <div class="w-1/12 h-full flex border-r border-slate-400 justify-center items-center">
                       <%= index + 1 %>
                     </div>
