changes in admin

--- a/views/generate_request.ejs
+++ b/views/generate_request.ejs
@@ -104,7 +104,7 @@
             <div
               class="md:w-11/12 w-full md:h-fit md:mt-10 h-full md:p-2 bg-zinc-100 text-slate-800 border border-slate-200 md:m-2 rounded-md"
             >
-              <h1 class="text-sm font-semibold tracking-tight">Dashboard</h1>
+              <h1 class="text-md font-bold tracking-tight">Dashboard</h1>
             </div>
             <!-- Dashboard-Container -->
 
@@ -133,35 +133,35 @@
             <!-- Navigation Menu -->
             <div class="w-11/12 mt-10">
               <div
-                class="w-full hover:bg-zinc-200 mt-10 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400"
+                class="w-full hover:bg-indigo-200 mt-10 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400"
               >
                 <a href="http://localhost:8000/prayaas/user/home">
-                  <h1 class="text-xs font-semibold cursor-pointer">Home</h1>
+                  <h1 class="text-sm font-bold cursor-pointer">Home</h1>
                 </a>
               </div>
               <div
-                class="w-full bg-zinc-200 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400 Show-Generate-Request-Button"
+                class="w-full bg-indigo-200 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400 Show-Generate-Request-Button"
               >
                 <a href="http://localhost:8000/prayaas/user/request">
-                  <h1 class="text-xs font-semibold cursor-pointer">
+                  <h1 class="text-sm font-bold cursor-pointer">
                     Generate Request
                   </h1>
                 </a>
               </div>
               <div
-                class="w-full hover:bg-zinc-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400"
+                class="w-full hover:bg-indigo-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400"
               >
                 <a href="http://localhost:8000/prayaas/user/payment_history">
-                  <h1 class="text-xs font-semibold cursor-pointer">
+                  <h1 class="text-sm font-bold cursor-pointer">
                     Payment History
                   </h1>
                 </a>
               </div>
               <div
-                class="w-full hover:bg-zinc-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400"
+                class="w-full hover:bg-indigo-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400"
               >
                 <a href="http://localhost:8000/prayaas/user/donate">
-                  <h1 class="text-xs font-semibold cursor-pointer">Donate</h1>
+                  <h1 class="text-sm font-bold cursor-pointer">Donate</h1>
                 </a>
               </div>
             </div>
@@ -185,10 +185,10 @@
         </div>
 
         <!-- Right Section -->
-        <div class="w-9/12 h-full generate-request" id="requestForm">
+        <div class="w-9/12 h-full generate-request overflow-scroll" id="requestForm">
           <div class="w-full h-full">
             <div class="h-1/5 w-full overflow-hidden">
-              <div class="absolute px-10 py-10">
+              <div class="px-10 py-10">
                 <h1 class="md:text-3xl text-2xl text-slate-800 font-semibold">
                   Generate Request
                 </h1>
@@ -401,8 +401,8 @@
                     <option value="" disabled selected>
                       Select Request Type
                     </option>
-                    <option value="Money">food</option>
-                    <option value="Money">clothes</option>
+                    <option value="food">food</option>
+                    <option value="clothes">clothes</option>
                   </select>
                   <label for="quantity" class="font-semibold mt-1"
                     >Quantity:</label
@@ -438,12 +438,16 @@
               </div>
               <!-- Image- Container -->
             </div>
+            <div class="w-full h-full bg-red-700">
+
+            </div>
           </div>
         </div>
         <!-- Right Section -->
       </div>
     </div>
     <!-- Main-content-are -->
+
 
     <!-- footer -->
     <div class="w-full h-fit flex justify-center items-end pl-2 pr-2">
