--- a/views/payments.ejs
+++ b/views/payments.ejs
@@ -137,7 +137,7 @@
         <!-- User-Card -->
         <div class="w-full h-full flex flex-col justify-start items-center">
           <div class="w-11/12 h-fit p-2 m-2 bg-zinc-100 md:mt-10 text-slate-800 border border-slate-200 m-2 rounded-md">
-            <h1 class="text-sm font-semibold tracking-tight">Dashboard</h1>
+            <h1 class="text-md font-bold tracking-tight">Dashboard</h1>
           </div>
           <div class="w-11/12 p-2 h-fit bg-zinc-100 text-slate-800 border border-slate-200 m-2 rounded-md">
             <h1 class="text-xs pd-1 font-semibold cursor-pointer">
@@ -168,29 +168,29 @@
           <!-- Navigation Menu -->
           <div class="w-11/12 mt-10">
             <div
-              class="w-full hover:bg-zinc-200 mt-10 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400">
+              class="w-full hover:bg-indigo-200 mt-10 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400">
               <a href="http://localhost:8000/prayaas/user/home">
-                <h1 class="text-xs font-semibold cursor-pointer">Home</h1>
+                <h1 class="text-sm font-bold cursor-pointer">Home</h1>
               </a>
             </div>
             <div
-              class="w-full hover:bg-zinc-200 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400 Show-Generate-Request-Button">
+              class="w-full hover:bg-indigo-200 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400 Show-Generate-Request-Button">
               <a href="http://localhost:8000/prayaas/user/request">
-                <h1 class="text-xs font-semibold cursor-pointer">Generate Request</h1>
+                <h1 class="text-sm font-bold cursor-pointer">Generate Request</h1>
               </a>
             </div>
-            <div class="w-full bg-zinc-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400">
+            <div class="w-full bg-indigo-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400">
               <a href="http://localhost:8000/prayaas/user/payment_history">
 
-                <h1 class="text-xs font-semibold cursor-pointer">
+                <h1 class="text-sm font-bold cursor-pointer">
                   Payment History
                 </h1>
               </a>
             </div>
-            <div class="w-full hover:bg-zinc-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400">
+            <div class="w-full hover:bg-indigo-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400">
               <a href="http://localhost:8000/prayaas/user/donate">
 
-                <h1 class="text-xs font-semibold cursor-pointer">
+                <h1 class="text-sm font-bold cursor-pointer">
                   Donate
                 </h1>
               </a>
