--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin@terminal</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap">
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+       body {
+            font-family: 'Poppins', sans-serif;
+        }
+    </style>
   </head>
   <body class="bg-white">
     <div class="container mx-auto p-0">
@@ -49,7 +55,9 @@
               <li
                 class="border-b hover:rounded-lg pl-2 border-gray-400 cursor-pointer pt-2 pb-2 hover:bg-indigo-100 font-semibold"
               >
+              <a href="http://localhost:8000/prayaas/request_window">
                 Request Window
+              </a>
               </li>
             </ul>
           </div>
@@ -58,13 +66,8 @@
           <!-- Login and Logout Section -->
           <div class="p-4 text-sm font-bold hidden md:block">
             <ul class="space-y-2 text-slate-700">
-              <li
-                class="border-b border-gray-400 pl-2 pt-2 hover:rounded-lg hover:bg-indigo-100 pb-2"
-              >
-                Logout
-              </li>
-              <li class="pb-2 pl-2 hover:rounded-lg pt-2 hover:bg-indigo-100">
-                Help & Support
+              <li class="border-b border-gray-400 pl-2 pt-2 hover:rounded-lg hover:bg-indigo-100 pb-2">
+                <a href="http://localhost:8000/prayaas/home">Logout</a>
               </li>
             </ul>
           </div>
