--- a/views/home.ejs
+++ b/views/home.ejs
@@ -107,7 +107,7 @@
         <div class="w-full h-full flex flex-col justify-start items-center">
           <div
             class="md:w-11/12 w-full md:h-fit md:mt-10 h-full md:p-2 bg-zinc-100 text-slate-800 border border-slate-200 md:m-2 rounded-md">
-            <h1 class="text-sm font-semibold tracking-tight">Dashboard</h1>
+            <h1 class="text-md font-bold tracking-tight">Dashboard</h1>
           </div>
           <!-- Dashboard-container -->
 
@@ -141,29 +141,29 @@
 
           <!-- Navigation Menu -->
           <div class="w-11/12 mt-10">
-            <div class="w-full bg-zinc-200 mt-10 mb-2 rounded-md h-fit p-2 text-slate-800">
+            <div class="w-full bg-indigo-200 mt-10 mb-2 rounded-md h-fit p-2 text-slate-800">
               <a href="http://localhost:8000/prayaas/user/home">
-                <h1 class="text-xs font-semibold cursor-pointer">Home</h1>
+                <h1 class="text-sm font-bold cursor-pointer">Home</h1>
               </a>
             </div>
             <div
-              class="w-full hover:bg-zinc-200 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400 Show-Generate-Request-Button">
+              class="w-full hover:bg-indigo-200 mb-2 rounded-md h-fit p-2 text-slate-800 border-b border-gray-400 Show-Generate-Request-Button">
               <a href="http://localhost:8000/prayaas/user/request">
-                <h1 class="text-xs font-semibold cursor-pointer">Generate Request</h1>
+                <h1 class="text-sm font-bold cursor-pointer">Generate Request</h1>
               </a>
             </div>
-            <div class="w-full hover:bg-zinc-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400">
+            <div class="w-full hover:bg-indigo-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400">
               <a href="http://localhost:8000/prayaas/user/payment_history">
 
-                <h1 class="text-xs font-semibold cursor-pointer">
+                <h1 class="text-sm font-bold cursor-pointer">
                   Payment History
                 </h1>
               </a>
             </div>
-            <div class="w-full hover:bg-zinc-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400">
+            <div class="w-full hover:bg-indigo-200 h-fit mb-2 rounded-md p-2 text-slate-800 border-b border-gray-400">
               <a href="http://localhost:8000/prayaas/user/donate">
 
-                <h1 class="text-xs font-semibold cursor-pointer">
+                <h1 class="text-sm font-bold cursor-pointer">
                   Donate
                 </h1>
               </a>
@@ -191,7 +191,7 @@
         <div class="w-full h-fit pl-10 md:text-sm font-semibold">
           <h1 class="pt-10 md:text-3xl text-2xl text-slate-800 ">Home,</h1>
           <h1 class="font-semibold text-indigo-400">Welcome User</h1>
-          <h1 class="text-xs font-normal text-slate-800 text-balance font-semibold">Welcome to Prayaas, where every
+          <h1 class="text-sm font-normal text-slate-800 text-balance font-semibold">Welcome to Prayaas, where every
             action counts towards creating a better world!
             At Prayaas, we are dedicated to making a meaningful impact on the lives of individuals and communities in
             need. With a passion for humanitarianism and a commitment to social justice, we strive to address pressing
