some changes in admin and user dashboard

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -97,7 +97,7 @@
             >
               <!-- Card 1 -->
               <div
-                class="bg-slate-100 rounded-md shadow-md border md:w-2/12 w-3/12 border-slate-100 cardback p-4"
+                class="bg-slate-100 rounded-md shadow-md border md:w-3/12 w-3/12 border-slate-100 cardback p-4"
               >
                 <h1 class="text-slate-700 font-bold text-left">
                   Donations Received
@@ -141,7 +141,7 @@
                   xxxxxxxxx <span class="text-slate-700">xxxxxxxxx</span>
                 </h1>
                 <h1 class="text-red-500 font-bold text-3xl text-left mt-2">
-                  <span class="text-slate-800"></span><%= "Value" || 0 %>
+                  <span class="text-slate-800"></span><%= "0" || 0 %>
                 </h1>
               </div>
               <!-- Card 7 -->
@@ -183,6 +183,23 @@
               <!-- Card 6 -->
               
             </div>
+          </div>
+          <div class="w-full h-full">
+            <!-- heading -->
+            <div class="w-full ml-10 mt-10 mb-20">
+              <h1 class="font-semibold text-slate-800">Graphs Statistics</h1>
+            </div>
+            <!-- heading -->
+            <!-- Graph-Window -->
+            <div class="w-full h-fit flex flex-col gap-5 justify-center items-center">
+              <div class="w-11/12 h-96 bg-zinc-100 border border-400 rounded-lg"></div>
+              <div class="w-11/12 h-96 flex justify-center gap-10 items-center">
+                <div class="w-4/5 h-full bg-zinc-100 border border-400 rounded-lg">ss</div>
+                <div class="w-4/5 h-full bg-zinc-100 border border-400 rounded-lg">ss</div>
+              </div>
+              <div class="w-11/12 h-96 bg-zinc-100 border border-400 rounded-lg"></div>
+            </div>
+            <!-- Graph-Window -->
           </div>
           <!-- Right Bottom Section -->
         </div>
