--- a/views/home.ejs
+++ b/views/home.ejs
@@ -209,19 +209,19 @@
             </div>
             <div class="w-4/12 rounded-md h-full shadow-sm border border-slate-300">
               <h1 class="text-sm font-bold text-center py-4 text-slate-700 bg-zinc-200">Amount Received</h1>
-              <h1 class="text-3xl text-center font-semibold px-3 py-3 text-slate-700">Rs <%= "0" || 0 %> /-</h1>
+              <h1 class="text-3xl text-center font-semibold px-3 py-3 text-slate-700">Rs <%= amountReceived|| '0' %> /-</h1>
             </div>
             <div class="w-4/12 rounded-md h-fit border border-slate-300">
               <h1 class="text-sm font-bold text-center py-4 text-slate-700 bg-white">Items Donated</h1>
               <h1 class="text-xs font-semibold px-3 pt-2 pb-2 text-slate-700 bg-gray-200">Food <span class="pl-5">: <%= Food || 0 %></span></h1>
               <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 ">Clothes <span class="pl-0">: <%= Clothes || 0 %></span></h1>
-              <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 bg-gray-200">Electronic Devices <span class="pl-3">: <%= ElectronicDevices || 0 %></span></h1>
+              <!-- <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 bg-gray-200">Electronic Devices <span class="pl-3">: <%= ElectronicDevices || 0 %></span></h1>
               <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 ">Books <span class="pl-0">: <%= Books || 0 %></span></h1>
               <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 bg-gray-200">Toys <span class="pl-3">: <%= Toys || 0 %></span></h1>
               <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 ">Furniture <span class="pl-0">: <%= Furniture || 0 %></span></h1>
               <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 bg-gray-200">Medical Supplies <span class="pl-3">: <%= MedicalSupplies || 0 %></span></h1>
               <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 ">Hygiene Products <span class="pl-0">: <%= HygieneProducts || 0 %> </span></h1>
-              <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 ">School Supplies <span class="pl-0">: <%= SchoolSupplies || 0 %> </span></h1>
+              <h1 class="text-xs font-semibold px-3 pb-2 pt-1 text-slate-700 ">School Supplies <span class="pl-0">: <%= SchoolSupplies || 0 %> </span></h1> -->
           </div>
         </div>
         <!-- Data-Analytics -->
