--- a/views/payments.ejs
+++ b/views/payments.ejs
@@ -222,17 +222,16 @@
           </div>
         </div>
 
-        <div class="w-full h-full py-10 ml-10 mt-0 flex justify-start items-center">
+        <div class="w-full h-fit py-10 ml-10 mt-0 flex justify-start items-center">
 
           <div class="w-11/12 h-full mt-0 mb-20">
 
-            <div class="w-full h-full mt-36">
+            <div class="w-full h-fit mt-36">
               <h1 class="mx-5 w-fit font-semibold mb-10 text-sm border-b border-slate-500">Amount Payments Donations
               </h1>
               <div>
                 <div
                   class="flex justify-between text-xs mb-2 font-bold items-center pl-2 pr-2 w-full h-8 bg-zinc-300 mb-1 border border-zinc-400 rounded-sn">
-                  <div class="w-1/12 h-full flex border-r border-gray-400 justify-center items-center">Sr.No</div>
                   <div class="w-2/12 h-full flex border-r border-gray-400 justify-center items-center ">Donation_ID
                   </div>
                   <div class="w-2/12 h-full flex border-r border-gray-400 justify-center items-center ">Date</div>
@@ -242,13 +241,10 @@
                 </div>
               </div>
 
-              <% donate_money.forEach(function(donation, index) { %>
-                <% if (donation.request_type==="Amount" && donation.donor_id===donor_id) { %>
+              <% donate_money.forEach(function(donation) { %>
+                <% if (donation.amount && donation.donor_id===donor_id) { %>
                   <div
                     class="flex justify-between flex-row w-full rounded-sm cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2 h-10 bg-white mb-0.5 border border-3 border-zinc-400 ">
-                    <div class="w-1/12 h-full flex border-r border-slate-400 justify-center items-center">
-                      <%= index + 1 %>
-                    </div>
                     <div
                       class="w-2/12 h-full flex border-r border-slate-400 text-black font-bold justify-center items-center ">
                       <%= donation.donation_id %>
@@ -271,29 +267,25 @@
                     <% }); %>
             </div>
 
-            <div class="w-full h-full">
-              <h1 class="mx-5 w-fit font-semibold mb-10 text-sm border-b border-slate-500">Other Donations
+            <div class="w-full h-fit">
+              <h1 class="mx-5 w-fit font-semibold mb-12 mt-10 text-sm border-b border-slate-500">Other Donations
               </h1>
               <div>
                 <div
-                  class="flex justify-between text-xs mb-5 font-bold items-center pl-2 pr-2 w-full h-8 bg-zinc-300 rounded-sm mb-1 border border-zinc-400">
-                  <div class="w-1/12 h-full flex border-r border-gray-400 justify-center items-center">Sr.No</div>
+                  class="flex justify-between text-xs mb-2 font-bold items-center pl-2 pr-2 w-full h-8 bg-zinc-300 rounded-sm mb-1 border border-zinc-400">
                   <div class="w-2/12 h-full flex border-r border-gray-400 justify-center items-center ">Donation_ID
                   </div>
                   <div class="w-2/12 h-full flex border-r border-gray-400 justify-center items-center ">Date</div>
-                  <div class="w-2/12 h-full flex border-r border-gray-400 justify-center items-center ">Items</div>
-                  <div class="w-5/12 h-full flex border-l border-gray-300 justify-center items-center overflow-hidden"
+                  <div class="w-1/12 h-full flex border-r border-gray-400 justify-center items-center ">Items</div>
+                  <div class="w-6/12 h-full flex border-l border-gray-300 justify-center items-center overflow-hidden"
                     style="cursor: pointer;">Description</div>
                 </div>
               </div>
 
-              <% donate_items.forEach(function(donation, index) { %>
-                <% if (donation.request_type==="Items" && donation.donor_id===donor_id) { %>
+              <% donate_items.forEach(function(donation) { %>
+                <% if (donation.quantity && donation.donor_id===donor_id) { %>
                   <div
                     class="flex justify-between flex-row w-full cursor-pointer text-xs font-semibold text-slate-800 items-center pl-2 pr-2  h-10 bg-white mb-0.5 rounded-sm border border-3 border-zinc-400 ">
-                    <div class="w-1/12 h-full flex border-r border-slate-400 justify-center items-center">
-                      <%= index + 1 %>
-                    </div>
                     <div
                       class="w-2/12 h-full flex border-r border-slate-400 text-black font-bold justify-center items-center ">
                       <%= donation.donation_id %>
@@ -302,11 +294,11 @@
                       <%= donation.date %>
                     </div>
                     <div
-                      class="w-2/12 h-full flex text-red-500 font-bold border-r border-slate-400 justify-center items-center">
+                      class="w-1/12 h-full flex text-red-500 font-bold border-r border-slate-400 justify-center items-center">
                       <%= donation.donate_type %>
                     </div>
                     <div
-                      class="w-5/12 h-full pl-2 pr-2 flex justify-center items-center overflow-hidden donation-details donation-entry"
+                      class="w-6/12 h-full pl-2 pr-2 flex justify-center items-center overflow-hidden donation-details donation-entry"
                       style="cursor: pointer;">
                       <h1 class="w-full h-full flex text-xs justify-center items-center">
                           <%= donation.description %>
